--- a/views/articles/index.mustache
+++ b/views/articles/index.mustache
@@ -13,21 +13,20 @@
     <h1 class="mb-4">Blog Articles</h1>
     <a href="/articles/new" class="btn btn-success">New Article</a>
     
-    <% articles.forEach(article => { %>
+    <p></p>
+    
+    <div class="list-group">
+    {{#articles}}
+  <a href="#" class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">{{title}}</h5>
 
-       <div class="card mt-4">
-           <div class="card-body">
+    </div>
+    <p class="mb-1">{{description}}</p>
+  </a>
+    {{/articles}}
+  </div>
 
-         <h4 class="card-title"><%= article.title  %></h4>
-         <div class="card-subtitle text-muted mb-2">
-            <%= article.createdAt.toLocaleDateString()  %>
-         </div>
-         <div class="card-text mb-2">
-            <%= article.description  %>
-         </div>
-       </div>
-       </div>
-   <% }) %>
 </div>
 </body>
 </html>
