updated files without routes folder

--- a/views/add-article.mustache
+++ b/views/add-article.mustache
@@ -1,21 +1,21 @@
 <html>
 <head>
 
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
 
-  <h1>New Article</h1>
+  <h1>Add Article</h1>
 
   <div class="container">
 
 
-  <form action='/articles/new' method="POST">
+  <form action='/add-article' method="POST">
   <div class="form-group">
     <label for="exampleInputEmail1">Title</label>
     <input type="text" name="title" class="form-control" placeholder="Enter title">
