--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@
 <body>
   <div class="container">
     <h1 class="mb-4">Blog Articles</h1>
-    <a href="/articles/new" class="btn btn-success">New Article</a>
+    <a href="/add-article" class="btn btn-success">New Article</a>
     
     <p></p>
     
@@ -22,7 +21,7 @@
       <h5 class="mb-1">{{title}}</h5>
 
     </div>
-    <p class="mb-1">{{description}}</p>
+    <p class="mb-1">{{body}}</p>
   </a>
     {{/articles}}
   </div>
